[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.6.2",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.2",
    "google-generativeai>=0.8.5",
    "openai>=1.101.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "email-validator>=2.3.0",
    "gunicorn>=23.0.0",
]
